--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -110,7 +110,7 @@ select {
 input:focus-visible,
 textarea:focus-visible,
 select:focus-visible {
-	outline: 2px solid #000;
+	outline: 1px solid #000;
 }
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button,
 textarea::-webkit-outer-spin-button,
@@ -197,6 +197,7 @@ button {
 	cursor: pointer;
 	font-family: "KoPubDotum", sans-serif;
 	line-height: 150%;
+	font-weight: 700;
 }
 button:focus {
 	outline: #000;
